@@ -27,7 +27,8 @@ arquivos de configuração:
 	_ 00-thinstation.sh (dev): implementação Linux gratuita e de código aberto de um sistema operacional thin client;
 	_ 00-bastillion.sh (dev): console SSH baseado na web que gerencia o acesso administrativo aos sistemas;
 	_ 00-jenkins.sh (dev): servidor de automação de código aberto;
-	_ 00-awx.sh (dev): oferece software para gerenciar projetos Ansible.
+	_ 00-awx.sh (dev): oferece software para gerenciar projetos Ansible;
+	_ 00-owa.sh (dev): software de análise para rastrear e analisar o acesso a websites.
 
 26/11/2021 - Robson Vaamonde - Criação dos novos scripts de configuração: 00-webdav.sh, 00-nfs.sh, 00-nextcloud.sh,
 00-samba4.sh, 00-postfix.sh, 00-netbox.sh, 00-gitlab.sh, 00-redmine.sh, 00-shinobi.sh, 00-netdisco.sh, 00-thinstation.sh
