@@ -12,6 +12,7 @@
 # Testado e homologado para a versão do GLPI Help Desk v9.5.x
 #
 # Agendamento das atualização dos Registros do GLPI a cada 1 minuto, todos os dias
+# [minutos] [horas] [dias do mês] [mês] [dias da semana] [usuário] [comando]
 */1 * * * * root /usr/bin/php7.4 /var/www/html/glpi/front/cron.php &> /dev/null
 
 #Fim do agendamento, obrigatório ter uma linha em branco no final do arquivo para a execução correta.
