@@ -11,23 +11,23 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x 
 # Testado e homologado para a versão do GLPI Help Desk v9.5.x
-
+#
 #Configuração do Virtual Host do GLPI Help Desk no Apache2 na porta padrão 80
 <VirtualHost *:80>
-
+	#
 	# Configuração do email do administrador do GLPI Help Desk
 	ServerAdmin admin@pti.intra
-	
+	#
 	# Configuração do Virtual Host que irá responder pelas requisições do GLPI Help Desk
 	ServerName  glpi.pti.intra
 	ServerAlias helpdesk.pti.intra
- 
+	#
 	# Configuração do suporte aos arquivo index.php, index.html do GLPI Help Desk
 	DirectoryIndex index.php index.html
-
+	#
 	# Diretório raiz da hospedagem do GLPI Help Desk
 	DocumentRoot /var/www/html/glpi/
-
+	#
 	# Configuração das permissões do diretório raiz do GLPI Help Desk
 	<Directory /var/www/html/glpi>
 		Options FollowSymLinks
@@ -35,7 +35,7 @@
 		Order allow,deny
 		allow from all
 	</Directory>
-
+	#
 	# Configuração dos módulos de segurança de acesso ao GLPI Help Desk
 	# Descomentar essas linhas depois de configurar o GLPI Help Desk
 	#<IfModule mod_rewrite.c>
@@ -48,9 +48,8 @@
 	#	RewriteRule ^(.*)$ - [S=1]
 	#	RewriteRule . /index.php [L]
 	#</IfModule>
-
+	#
  	# Configuração dos arquivos de Log do GLPI Help Desk
 	ErrorLog ${APACHE_LOG_DIR}/error-glpi.log
-	CustomLog ${APACHE_LOG_DIR}/access-glpi.log combined
-	
+	CustomLog ${APACHE_LOG_DIR}/access-glpi.log combined	
 </VirtualHost>
