@@ -7,7 +7,7 @@
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
 # Data de atualização: 18/10/2021
-# Versão: 0.01
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 #
@@ -23,6 +23,14 @@
 	# Configuração dos arquivos de Log do Apache2
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	#
+	# Configuração da aplicação de análise de páginas Web AWStats.
+	Alias /awstatsclasses "/usr/share/awstats/lib/"
+	Alias /awstats-icon/ "/usr/share/awstats/icon/"
+	Alias /awstatscss "/usr/share/doc/awstats/examples/css"
+	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
+	ScriptAlias /awstats/ /usr/lib/cgi-bin/
+	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
 	#
 	# Configuração do diretório do Wordpress (descomentar as linhas abaixo somente
 	# se você não estiver usando o Virtual Host do Wordpress)
