@@ -1,9 +1,37 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 18/01/2022
+# Data de atualização: 18/01/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do AWStats v7.x
+#
+# Configuração básica do software de análise de acesso as páginas do Apache2 AWStats
+# Arquivo gerado com base no arquivo localizado em: /etc/awstats/awstats.conf, foi
+# utilizado o comando: egrep -v '^(;|#|//|$)' awstats.conf > awstats.pti.intra.conf
+# para limpar o contéudo do arquivo awstats.conf e gerar o novo arquivo de config do
+# domínio que será analisado pelo AWStats.
+#
+# Localização do arquivo de acesso a páginas do Apache2
 LogFile="/var/log/apache2/access.log"
+#
+# Configuração do formato de Log utilizado pelo Apache2
 LogType=W
 LogFormat=4
 LogSeparator=" "
-SiteDomain=""
-HostAliases="localhost 127.0.0.1"
+# Configuração do Nome de Domínio do Site (utilizando Virtual Host do Apache2)
+SiteDomain="pti.intra"
+#
+# Configuração dos Endereços de acesso ao Site padrão do Apache2
+HostAliases="pti.intra www.pti.intra localhost 127.0.0.1 172.16.1.20"
+#
+# Bloco de configuração padrão do AWStats (deixar o padrão), alterar somente se
+# for necessário para as customizações dos relatórios do AWStats.
 DNSLookup=1
 DynamicDNSLookup=0
 DirData="/var/lib/awstats"
@@ -53,14 +81,14 @@ NbOfLinesForCorruptedLog=50
 WrapperScript=""
 DecodeUA=0
 MiscTrackerUrl="/js/awstats_misc_tracker.js"
-LevelForBrowsersDetection=2         # 0 disables Browsers detection.
-LevelForOSDetection=2               # 0 disables OS detection.
-LevelForRefererAnalyze=2            # 0 disables Origin detection.
-LevelForRobotsDetection=2           # 0 disables Robots detection.
-LevelForSearchEnginesDetection=2    # 0 disables Search engines detection.
-LevelForKeywordsDetection=2         # 0 disables Keyphrases/Keywords detection.
-LevelForFileTypesDetection=2        # 0 disables File types detection.
-LevelForWormsDetection=0            # 0 disables Worms detection.
+LevelForBrowsersDetection=2
+LevelForOSDetection=2
+LevelForRefererAnalyze=2
+LevelForRobotsDetection=2
+LevelForSearchEnginesDetection=2
+LevelForKeywordsDetection=2
+LevelForFileTypesDetection=2
+LevelForWormsDetection=0
 UseFramesWhenCGI=1
 DetailedReportsOnNewWindows=1
 Expires=0
@@ -142,27 +170,27 @@ LogoLink="http://www.awstats.org"
 BarWidth   = 260
 BarHeight  = 90
 StyleSheet=""
-color_Background="FFFFFF"		# Background color for main page (Default = "FFFFFF")
-color_TableBGTitle="CCCCDD"		# Background color for table title (Default = "CCCCDD")
-color_TableTitle="000000"		# Table title font color (Default = "000000")
-color_TableBG="CCCCDD"			# Background color for table (Default = "CCCCDD")
-color_TableRowTitle="FFFFFF"	# Table row title font color (Default = "FFFFFF")
-color_TableBGRowTitle="ECECEC"	# Background color for row title (Default = "ECECEC")
-color_TableBorder="ECECEC"		# Table border color (Default = "ECECEC")
-color_text="000000"				# Color of text (Default = "000000")
-color_textpercent="606060"		# Color of text for percent values (Default = "606060")
-color_titletext="000000"		# Color of text title within colored Title Rows (Default = "000000")
-color_weekend="EAEAEA"			# Color for week-end days (Default = "EAEAEA")
-color_link="0011BB"				# Color of HTML links (Default = "0011BB")
-color_hover="605040"			# Color of HTML on-mouseover links (Default = "605040")
-color_u="FFAA66"				# Background color for number of unique visitors (Default = "FFAA66")
-color_v="F4F090"				# Background color for number of visites (Default = "F4F090")
-color_p="4477DD"				# Background color for number of pages (Default = "4477DD")
-color_h="66DDEE"				# Background color for number of hits (Default = "66DDEE")
-color_k="2EA495"				# Background color for number of bytes (Default = "2EA495")
-color_s="8888DD"				# Background color for number of search (Default = "8888DD")
-color_e="CEC2E8"				# Background color for number of entry pages (Default = "CEC2E8")
-color_x="C1B2E2"				# Background color for number of exit pages (Default = "C1B2E2")
+color_Background="FFFFFF"
+color_TableBGTitle="CCCCDD"
+color_TableTitle="000000"
+color_TableBG="CCCCDD"
+color_TableRowTitle="FFFFFF"
+color_TableBGRowTitle="ECECEC"
+color_TableBorder="ECECEC"
+color_text="000000"
+color_textpercent="606060"
+color_titletext="000000"
+color_weekend="EAEAEA"
+color_link="0011BB"
+color_hover="605040"
+color_u="FFAA66"
+color_v="F4F090"
+color_p="4477DD"
+color_h="66DDEE"
+color_k="2EA495"
+color_s="8888DD"
+color_e="CEC2E8"
+color_x="C1B2E2"
 LoadPlugin="hashfiles"
 ExtraTrackedRowsLimit=500
 Include "/etc/awstats/awstats.conf.local"
