@@ -11,23 +11,23 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 # Testado e homologado para a versão do LogAnalyzer v4.1.x
-
-#Configuração do Virtual Host do LogAnalyzer no Apache2 na porta padrão 80
+#
+# Configuração do Virtual Host do LogAnalyzer no Apache2 na porta padrão 80
 <VirtualHost *:80>
-
+	#
 	# Configuração do email do administrador do LogAnalyzer
 	ServerAdmin admin@pti.intra
-	
+	#
 	# Configuração do Virtual Host que irá responder pelas requisições do LogAnalyzer
 	ServerName  log.pti.intra
 	ServerAlias loganalyzer.pti.intra
- 
+	#
 	# Configuração do suporte aos arquivo index.php e index.html
 	DirectoryIndex index.php index.html
-
+	#
 	# Diretório raiz da hospedagem do LogAnalyzer
 	DocumentRoot /var/www/html/log/
-
+	#
 	# Configuração das permissões do diretório raiz do LogAnalyzer
 	<Directory /var/www/html/log>
 		Options FollowSymLinks
@@ -35,9 +35,8 @@
 		Order allow,deny
 		allow from all
 	</Directory>
-
+	#
  	# Configuração dos arquivos de Log do LogAnalyzer
 	ErrorLog ${APACHE_LOG_DIR}/error-loganalyzer.log
 	CustomLog ${APACHE_LOG_DIR}/access-loganalyzer.log combined
-	
 </VirtualHost>
