@@ -11,9 +11,9 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Rsyslog v8.x
 # Testado e homologado para a versão do LogAnalyzer v4.1.x
-
+#
 # Configurações Globais do recurso de armazenamento de Log no MySQL
-
+#
 # Habilitando o módulo do MySQL para suportar o Syslog/Rsyslog do LogAnalyzer
 $ModLoad ommysql
 *.* :ommysql:localhost,syslog,syslog,syslog
