@@ -11,21 +11,21 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Rsyslog v8.x
 # Testado e homologado para a versão do LogAnalyzer v4.1.x
-
+#
 # Configurações Globais do Syslog/Rsyslog utilizado pelo LogAnalyzer
-
+#
 # Habilitando o recurso do Syslog/Rsyslog para receber dados via UDP, utilizado pelo LogAnalyzer
 module(load="imudp")
 input(type="imudp" port="514")
-
+#
 # Habilitando o recurso do Syslog/Rsyslog para receber dados via TCP, utilizado pelo LogAnalyzer
 module(load="imtcp")
 input(type="imtcp" port="514")
-
+#
 # Manter as configurações padrão, não alterar os valores abaixo
-module(load="imuxsock") # provides support for local system logging
-module(load="imklog")   # provides kernel logging support
-#module(load="immark")  # provides --MARK-- message capability
+module(load="imuxsock")
+module(load="imklog")
+#module(load="immark")
 $KLogPermitNonKernelFacility on
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $RepeatedMsgReduction on
