@@ -16,6 +16,9 @@ de testes e homologação (acréscentado no final do arquivo, opções comentada
 do Neofetch, criação do arquivo de CRON: neofetch-cron para atualizar o arquivo motd, atualização das opções no 
 arquivo: 01-openssh.sh, atualização do arquivo de configuração: dhcpd.conf com novas opções: get-lease-hostnames on;
 e ping-check on;, customização do arquivo: isc-dhcp-server habilitando somente o IPv4 e Interface de Rede enp0s3,
+acréscimo do bloco para habilitar os principais módulos do Apache2 no script: 07-lamp.sh, acréscimo do aplicativo
+AWStats no script: 00-parametros.sh referente a instalação do LAMP-Server e acrescentado as opções de configuração
+no script: 07-lamp.sh.
 
 17/01/2022 - Robson Vaamonde - Atualização dos arquivos: issue.net, 04-ConfiguracaoDoNeplan.sh, correção do Locale no
 arquivo: 05-ntp.sh, acréscimo das linhas: locale-gen pt_BR.UTF-8, localectl set-locale LANG=pt_BR.UTF-8 e correção do
